--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
             <div class="card card-block">
               <a href="#"><img alt="" class="team-img" src="img/team-1.png">
               <div class="card-title-wrap">
-                <span class="card-title">Project 100</span> <span class="card-text">Art Director</span>
+                <span class="card-title">Project 100</span> <span class="card-text">Innovation</span>
               </div>
 
               <div class="team-over">
@@ -619,7 +619,7 @@
             <div class="card card-block">
               <a href="#"><img alt="" class="team-img" src="img/team-1.png">
               <div class="card-title-wrap">
-                <span class="card-title">Project 100</span> <span class="card-text">Art Director</span>
+                <span class="card-title">Project 100</span> <span class="card-text">That</span>
               </div>
 
               <div class="team-over">
@@ -642,7 +642,7 @@
             <div class="card card-block">
               <a href="#"><img alt="" class="team-img" src="img/team-1.png">
               <div class="card-title-wrap">
-                <span class="card-title">Project 100</span> <span class="card-text">Art Director</span>
+                <span class="card-title">Project 100</span> <span class="card-text">Solves</span>
               </div>
 
               <div class="team-over">
