--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
           Meet our team
         </h2>
 
-        <div class="row">
+        <div class="row text-center">
           <div class="col-sm-3 col-xs-6">
             <div class="card card-block">
               <a href="#"><img alt="" class="team-img" src="img/team-1.png">
