--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 
               <div class="team-over">
                 <h4 class="hidden-md-down">
-                  Connect with me
+                  Connect with us
                 </h4>
 
                 <nav class="social-nav">
