--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
             <div class="card card-block">
               <a href="#"><img alt="" class="team-img" src="img/team-1.png">
               <div class="card-title-wrap">
-                <span class="card-title">Project 100</span> <span class="card-text">Art Director</span>
+                <span class="card-title">Project 100</span> <span class="card-text">Project 100</span>
               </div>
 
               <div class="team-over">
